weblate_web/static/style.css
/* ... */
html[dir="rtl"] .installations .box {
  margin: 0 2% 2% 0;
}

.installations .box:nth-child(2n + 1) {
  margin-left: 0;
}

html[dir="rtl"] .installations .box:nth-child(2n + 1) {
  margin-right: 0;
}

.installations .box .icon {
  float: right;
}

html[dir="rtl"] .installations .box .icon {
  float: left;
}

.installations .box h2 {
  font-size: 28px;
  font-weight: 700;
  letter-spacing: -0.5px;
  line-height: 36px;
  margin: 0 0 20px;
}

.installations .box ul {
  margin: 0 0 20px 25px;
  max-width: 380px;
  list-style: none;
  clear: left;
  padding-bottom: 32px;
}

html[dir="rtl"] .installations .box ul {
  margin: 0 25px 20px 0;
  clear: right;
}

.installations .box li::before,
.contribution-list .box ul li::before {
  content: "•";
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

html[dir="rtl"] .installations .box li::before,
html[dir="rtl"] .contribution-list .box ul li::before {
  margin-right: -1em;
  margin-left: 0;
}

.installations .box li {
  margin-bottom: 5px;
}

.installations a.button.center {
  margin-top: 20px;
}

h2.section-title.payment-conditions {
  margin-top: 100px;
  color: #1fa385;
  font-size: 26px;
  margin-bottom: 15px;
}

.github-discuss a {
  color: #2eccaa;
  text-decoration: underline;
}

.github-discuss a:hover {
  text-decoration: none;
}

.payment-form input[type="text"],
.payment-form input[type="email"],
.payment-form select {
  height: 50px;
  border-radius: 25px;
  background-color: #e1e3e5;
  margin-right: 20px;
  border: 0;
  font-size: 18px;
  padding: 0 25px;
  color: #000;
  outline: none;
}

html[dir="rtl"] .payment-form input[type="text"],
html[dir="rtl"] .payment-form input[type="email"],
html[dir="rtl"] .payment-form select {
  margin-right: 0;
  margin-left: 20px;
}

.payment-form select {
  appearance: none;
  padding-right: 50px;
  background-image: url("img/arrow-down-black.svg");
  background-position: calc(100% - 20px) center;
  background-repeat: no-repeat;
  width: 100%;
}

html[dir="rtl"] .payment-form select {
  padding-right: 0;
  padding-left: 50px;
  background-position: 20px center;
}

.github-discuss {
  background-image: url("img/github.png");
  background-position: left center;
  background-repeat: no-repeat;
  min-height: 160px;
  padding-top: 58px;
  border-radius: 20px;
  background-color: #f8f9f9;
  color: #2a3744;
  font-size: 40px;
  letter-spacing: -1px;
  line-height: 44px;
  float: left;
  width: 100%;
  padding-left: 400px;
}

html[dir="rtl"] .github-discuss {
  background-position: right center;
  float: right;
  padding-left: 0;
  padding-right: 400px;
}

.libre-hosting {
  background-image: url("img/LibreGirl.png");
  background-position: left center;
  background-repeat: no-repeat;
  background-color: #d5f5ee;
  min-height: 200px;
  border-radius: 20px;
  float: left;
  width: 100%;
  padding: 0 30px 30px 330px;
  color: #2a3744;
  margin: 50px 0 100px 0;
}

html[dir="rtl"] .libre-hosting {
  background-image: url("img/LibreGirlRTL.png");
  background-position: right center;
  float: right;
  padding: 0 330px 30px 30px;
}

.libre-hosting h2 {
  font-size: 28px;
  font-weight: bold;
  letter-spacing: -0.5px;
  line-height: 36px;
}
.libre-hosting p {
  font-size: 20px;
  letter-spacing: 0.4px;
  line-height: 30px;
}

body.page .supporters {
  margin-bottom: 0;
}

h2.section-title.hp-style {
  color: #2a3744;
  font-size: 40px !important;
  font-weight: 300;
  letter-spacing: 2px;
  line-height: 64px;
  margin-bottom: 40px;
  text-transform: uppercase;
}

.pricing-table {
  width: 100%;
  float: left;
  margin-bottom: 100px;
}

html[dir="rtl"] .pricing-table {
  float: right;
}

.pricing-table-top {
  float: left;
  width: calc(100% - 480px);
  min-width: 580px;
  margin: 0 240px 0 240px;
  border-radius: 20px 20px 0 0;
  background-color: #2eccaa;
  padding: 12px;
  color: #ffffff;
  font-size: 20px;
  letter-spacing: 0;
  line-height: 25px;
  text-align: center;
}

html[dir="rtl"] .pricing-table-top {
  float: right;
  left: -25px;
  right: unset;
}

.pricing-table-left {
  width: 220px;
  float: left;
  border-radius: 20px;
  padding: 10px 50px 15px 20px;
  right: -25px;
  position: relative;
  background-color: #e9eaec;
  margin-top: 130px;
}

html[dir="rtl"] .pricing-table-left {
  float: right;
  padding: 10px 20px 15px 50px;
  right: unset;
  left: -25px;
}

.pricing-table-left .line {
  height: 80px;
  position: relative;
}

.pricing-table-left .line span.middle {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translate(0, -50%);
}

html[dir="rtl"] .pricing-table-left .line span.middle {
  left: unset;
  right: 0;
}

.pricing-table-right {
  width: calc(100% - 220px);
  float: right;
  text-align: center;
  border-radius: 20px;
  background-color: #fff;
  color: #2a3744;
  font-size: 20px;
  position: relative;
  z-index: 100;
  letter-spacing: 0.5px;
  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
  overflow: auto;
}

html[dir="rtl"] .pricing-table-right {
  float: left;
}

.pricing-table-right-inner {
  width: 100%;
  min-width: 870px;
}
.pricing-table-right-inner-2 {
  min-width: 1050px;
}

.pricing-table-right .col {
  width: 20%;
  float: left;
  min-width: 145px;
  border-left: 1px solid #e8e9eb;
}

html[dir="rtl"] .pricing-table-right .col {
  float: right;
  border-right: 1px solid #e8e9eb;
  border-left: 0;
}

.pricing-table-right-2 .col {
  width: 14.25%;
}

.pricing-table-right .col:nth-child(1) {
  border-left: 0;
}

html[dir="rtl"] .pricing-table-right .col:nth-child(1) {
  border-right: 0;
}

.pricing-table .line {
  line-height: 125%;
  padding: 27.5px 0;
  min-height: 80px;
}

.pricing-table .head {
  line-height: 165%;
  height: 140px;
}
.pricing-table .head.blue {
  color: #3388ff;
}
.pricing-table .head.red {
  color: #f6664c;
}

.pricing-table .head strong {
  font-size: 28px;
  font-weight: bold;
  letter-spacing: -0.5px;
}

.pricing-table .line a {
  color: #2eccaa;
  letter-spacing: -0.5px;
}
.pricing-table-left .line a {
  color: #1fa385;
}
/* ... */

